@@ -1,6 +1,21 @@
 # othello
-othello
 
-work in progress
+Bienvenue sur le readme Othello
 
-- UML à mettre à jour 
+### Compilation
+
+Pour compiler le projet, il est important que vous ayez un accès à la librairie graphique de Java c'est à dire JavaFX, si ce n'est pas le cas rendez vous dans
+la partie installer JavaFX
+
+
+Dès que cela est fait décompresser l'archive javaFX et récupérer le chemin jusqu'au dossier lib de JavaFX copié le
+
+Poour executer le projet il vous faudra donc faire : 
+
+java --module-path "/Chemin jusqu'au dossier/lib" --add-modules javafx.controls,javafx.fxml -jar othello.jar
+
+### Installer JavaFX
+
+Pour cela rendez vous sur ce lien : https://gluonhq.com/products/javafx/
+
+Et installer la version SDK qui correspond à l'architecture de votre machine  
